--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run multi-column:serve-ssr",
+    "serve:ssr": "node dist/multi-column/server/main.js",
+    "build:ssr": "ng build && ng run multi-column:server",
+    "prerender": "ng run multi-column:prerender"
   },
   "private": true,
   "dependencies": {
@@ -16,11 +20,15 @@
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.1.0",
-    "@angular/material": "^15.2.1",
+    "@angular/material": "^15.1.1",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
+    "@angular/platform-server": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@angular/service-worker": "^15.1.0",
+    "@nguniversal/common": "^15.1.0",
+    "@nguniversal/express-engine": "^15.2.1",
+    "express": "^4.15.2",
     "jspdf": "^2.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -30,7 +38,10 @@
     "@angular-devkit/build-angular": "^15.1.0",
     "@angular/cli": "^16.1.3",
     "@angular/compiler-cli": "^15.1.0",
+    "@nguniversal/builders": "^15.2.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^16.11.7",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
