--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/service-worker": "^15.1.0",
     "@nguniversal/common": "^15.1.0",
     "@nguniversal/express-engine": "^15.2.1",
+    "dom-to-image": "^2.6.0",
     "express": "^4.15.2",
     "jspdf": "^2.5.1",
     "rxjs": "~7.8.0",
